# stmf303

./: .env  .gitignore  Cargo.toml  README.md  link_hardfloat.py  platformio.cargo.py  platformio.ini
.cargo/: config.toml
boards/: stm32f303rct6.json
src/: lib.rs
