[package]
name = "stmf303"
edition = "2021"
version = "0.1.0"

# [lib]
# # path = "src/lib.rs"
# name = "stmf303"
# edition = "2021"
# # crate-type = ["staticlib"]
# required-features = []

harness = false
[dependencies]
# Only set the critical section feature, if you are using a bare-metal platform
# without any RTOS
# See https://github.com/rust-embedded/critical-section for further details.
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
# Panic behavior, see https://crates.io/keywords/panic-impl for alternatives
# panic-halt = "0.2.0"
# panic-rtt-core = "0.2.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtt-target = "0.5.0"
# Replace stm32f303xc with your target chip, see next section for more info
stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xc"] }
# panic-rtt-target = { version = "0.1.3" }
systick-monotonic = "1.0.1"
# defmt = "0.3"
# defmt-rtt = "0.4"
cortex-m-semihosting = "0.5.0"
rtic-monotonics = { version = "2.0.1", features = ["cortex-m-systick"] }
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }

[dev-dependencies]
# defmt-test = "0.3"


[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false
overflow-checks = true

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
